# CS100-Project

./: .gitignore  CMakeLists.txt  README.md  UMLdiagram.puml  run-valgrind.sh
docs/: ClassRelationDiagram.puml  classes.txt  commands.txt  interfaceflow.puml
docs/file_schema/: category_list.ksy  directory_metadata.ksy  map.txt  member_list.ksy  note_list.ksy  task.ksy  taskboard_metadata.ksy
emptydirectory/: _directory.cdm
include/: ActionLog.hpp  ActionLogItem.hpp  CategoryInfo.hpp  CategoryList.hpp  Commands.hpp  DataEntry.hpp  Directory.hpp  Member.hpp  MemberList.hpp  Note.hpp  NoteList.hpp  Task.hpp  TaskBoard.hpp  command_help.hpp
include/lib/: dir_helpers.hpp  file_io.hpp  summary.hpp
mydir/: _directory.cdm
mydir/boards/0/: _board.cbm  category_list.ccl  member_list.cml  note_list.cnl
mydir/boards/0/tasks/: 0
newboard/: _directory.cdm
newboard/boards/0/: _board.cbm
src/: ActionLog.cpp  ActionLogItem.cpp  CMakeLists.txt  CategoryInfo.cpp  CategoryList.cpp  Commands.cpp  DataEntry.cpp  Directory.cpp  Member.cpp  MemberList.cpp  Note.cpp  NoteList.cpp  Task.cpp  TaskBoard.cpp  _command_index.cpp  main.cpp
src/commands/: Add-Board-Note.cpp  Add-Board.cpp  Add-Category.cpp  Add-Member.cpp  Add-Task-Note.cpp  Add-Task.cpp  Assign-Member.cpp  Categorize-Task.cpp  Exit.cpp  Help.cpp  List-Board-Notes.cpp  List-Boards.cpp  List-Categories.cpp  List-Members.cpp  List-Tasks.cpp  Move-Category.cpp  Remove-Board-Note.cpp  Remove-Board.cpp  Remove-Category.cpp  Remove-Member.cpp  Remove-Task.cpp  Set.cpp  Show-Board-Note.cpp  Show-Task.cpp  Summary.cpp  Unset.cpp
test/: CMakeLists.txt  test.cpp  test_commands.cpp  test_fileio.cpp
testBoard/: _directory.cdm
testBoard/boards/0/: _board.cbm  category_list.ccl
testBoard/boards/1/: _board.cbm
testBoard/boards/2/: _board.cbm  member_list.cml
testBoard/boards/3/: _board.cbm
testBoard/boards/5/: _board.cbm
